# snowball

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  O0  README.md  TODO.md  blake3.cmake  compile_commands.json.tmp23c9b  dbg.sh  deps.reky  fib  flake.nix  index.html  notes.md  sn.conf  sn.confy  sn.reky  sn.toml  snowball.version.id  snowball.version.info  test.l  test.ll  test.txt  tet.ll  uninstall.sh  valgrind.md  xmake.lua
.github/: release.yml
.github/workflows/: bench.yml  cmake.yml  cpp-linter.yml  gen_docs.yml  generate_docs.yml  publish.yml  release.yml  test.yml  update_submodules.yml
app/: cli.cc  cli.h  crash_handler.h  main.cc
app/commands/: bench.h  build.h  docgen.h  init.h  pm.h  run.h  test.h
bench/fib/: README.md  fib  fib.c  fib.cpp  fib.go  fib.lua  fib.php  fib.py  fib.sn  run.rb  run.sh  sn.toml
build_scripts/: build-snowball.sh  clean.sh  cross-compile-windows.sh  dbg.sh  install_deps.sh  install_stdlib.sh  release.sh  release_build.sh  toolchains-windows.cmake
cmake/: backtrace-config.h.in  backtrace-supported.h.in  corrosion_cxx.cmake
containers/: Dockerfile.x86_64
containers/ce-specific/: Dockerfile.x86_64
containers/macos-11/: Dockerfile.x86_64
containers/ubuntu-20.04/: Dockerfile.aarch64  Dockerfile.armhf  Dockerfile.i386  Dockerfile.x86_64
containers/windows-latest/: Dockerfile.x86_64
docs/: code-quality.md  code-structure.md  infra.md  valgrind.md
engine/app/: cli.h
examples/: hello-world.sn
examples/AOC_2023/: sn.toml
examples/HelloWorld/: sn.toml
examples/lifegame/: sn.toml
exec/: cli.cc  cli.h  crash_handler.h  main.cc
exec/commands/: build.h  init.h  run.h  test.h
include/: colors.h  compiler.h  dbg_info.h  errors.h  lexer.h  logger.h  node.h  nodes.h  parser.h  snowball.h  source_info.h  token.h
include/exec/: cli.h
include/snowball/: api.h  attributes.h  colors.h  compiler.h  constants.h  enviroment.h  errors.h  export.hpp  generator.h  generics.h  ld_args.h  libs.h  logger.h  nodes.h  operators.h  parser.h  scopes.h  snowball.h  source_info.h  token.h  types.h  unittesting.h
installer/: main.nsh
libs/: CMakeLists.txt  system.cc  system.h
libs/stdlib/: README.md
libs/system/: CMakeLists.txt  README.md  lib.cc
runtime/gc/: gc.c  gc.h  main.c
runtime/libs/: Exception.cc  System.c  backtrace.cc  backtracing.h  core.c  exceptions.cc  exceptions.h  runtime.cc  runtime.h  segfault.cc  sym.h  system.c
script/: format.sh  install-deps.sh
scripts/: clang-tidy.sh  cmake-release.sh  format.sh  install.sh
scripts/development/: uninstall.sh
scripts/linux/: install-deps.sh
sn/: main.cc
src/: DBGSourceInfo.cc  DBGSourceInfo.h  SourceInfo.h  SourcedObject.h  api.cc  app.cppm  colors.cc  colors.h  common.h  compiler.cc  compiler.h  constants.h  dbg_info.cc  enviroment.cc  errors.cc  errors.h  export.hpp  generator.cc  generics.cc  ld_args.h  lexer.cc  lexer.h  libs.cc  logger.cc  logger.h  main.cc  main.cppm  main.sn  parser.cc  scopes.cc  source_info.h  token.h  types.cc
src/ValueVisitor/: Visitor.h  Visits.def
src/app/: cli.cc  cli.h  main.cc
src/ast/: location.sn  nodes.sn
src/builtins/: Number.cc
src/clowder/: clowder.cc  clowder.h
src/common/: castable.h  disk.cc  disk.h  error.cc  error.h  ffi.h  globals.cppm  globals.h  llvm.h  location.h  stl.cppm  stl.h  target.cc  target.h  threads.cc  threads.h  timer.cc  timer.h
src/compiler/: backend.cc  cl_args.cc  cl_args.h  compiler.cc  compiler.h  ctx.h  frontend.cc  global_ctx.sn  globals.h  lib.sn  llvm_stl.h  middleend.cc  package.h
src/constantTypes/: ct.def
src/defs/: accepts.def  ct.def  operators.def  visits.def
src/frontend/: component.cc  component.h  driver.cc  driver.h  lexer.cc  lexer.def  lexer.h  module.h  node.h  token.cc  token.h  tokens.def
src/ir/: IdMixin.cc  ModuleHolder.h  base.cc  id.h
src/lexer/: lexer.cc  lexer.h  lib.sn  token.sn
src/libs/: system.cc
src/llvm/: gc.cc
src/main/: app.cc  app.cpp  app.cppm  app.h  cl_args.cc  cl_args.cpp  cli.cc  cli.cpp  cli.cppm  cli.h  compiler.cc  compiler.h  main.cc  main.cpp  reky.cc  reky.h
src/os/: Driver.h
src/parser/: Parser.cc  Parser.h  buildOperatorTree.cc  parseAttributes.cc  parseBlock.cc  parseBlockOrStmt.cc  parseClass.cc  parseComment.cc  parseConditional.cc  parseConstant.cc  parseEnum.cc  parseExpr.cc  parseForLoop.cc  parseFunction.cc  parseFunctionCall.cc  parseGenericExpr.cc  parseGenericParams.cc  parseGlobal.cc  parseIdentifier.cc  parseImportStatement.cc  parseLoopControl.cc  parseMacro.cc  parseNamespace.cc  parseReturn.cc  parseStatement.cc  parseStructure.cc  parseSwitch.cc  parseThrow.cc  parseTryCatch.cc  parseType.cc  parseTypeAlias.cc  parseVariable.cc  parseWhereClause.cc  parseWhile.cc
src/pm/: Manager.cc  Manager.h
src/reky/: build.rs  reky.cc  reky.h
src/reports/: lib.sn
src/runtime/: common.h  testing.cc
src/services/: ImportCache.cc  ImportCache.h  ImportService.cc  ImportService.h  OperatorService.cc  OperatorService.h
stdlib/: Assert.sn  CLib.sn  Char.sn  Core.sn  Exceptions.sn  Limits.sn  Math.sn  OS.cc  Optional.sn  Panic.sn  Path.sn  Ptr.sn  Snowball.sn  SourceLocation.sn  System.cc  System.h  System.sn  Tuples.sn  WinterWonderland.sn  _$core.sn  __winter_wonderland__.sn  asserts.sn  c_bindings.sn  chars.sn  debug.sn  env.sn  fs.sn  intrinsics.sn  io.sn  iter.sn  json.sn  map.sn  math.sn  opt.sn  panics.sn  ptr.sn  rand.sn  sl.sn  ss.sn  std.sn  (+4 more)
templates/: config.h.in
test/: sn.toml
tests/: _rewrite_test.sn  algorithms.sn  bool.sn  bool.test.sn  char.sn  chars.sn  class.test.sn  clib.sn  cls.sn  enums.sn  env.sn  files.sn  functions.sn  functions.test.sn  fuzzy.test.sn  huge_file2.sn  if_else.sn  if_else.test.sn  interfaces.sn  iters.sn  json.sn  lambdas.sn  libs_include.sn  macros.sn  main.sn  map.sn  math.sn  mod.sn  number.test.sn  numbers.sn  option.sn  path.sn  rand.sn  ranges.sn  snowball-fuze.py  source_location.sn  string.sn  strings.sn  strings.test.sn  structs.sn  (+5 more)
utils/: mangle.py
(+693 files in other folders)
